# RemnaShopV2

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  deploy.bat  deploy.sh  docker-compose.yml  install.bat  install.sh  monitor.sh  pyproject.toml  remna-shop-bot.service  requirements.txt  update.sh
