[project]
name = "remna-shop"
version = "1.0.0"
description = "Бот для автоматической продажи VLESS VPN из панели Remnawave"
dependencies = [
    "aiogram==3.21.0",
    "flask==3.1.1",
    "pyotp==2.9.0",
    "python-dotenv==1.1.1",
    "qrcode[pil]==8.2",
    "yookassa==3.5.0",
    "aiohttp==3.10.5",
    "cryptography==43.0.1",
    "urllib3<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pylint",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]
